objects/Device_Plan_Product_Add_On__c.object
<CustomObject>
    <fields>
        <fullName>Add_On_Type__c</fullName>
        <label>Add On Type</label>
        <picklist>
            <picklistValues>
                <fullName>Additive</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Subtractive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Device_Plan_Product_Add_On_Id__c</fullName>
        <externalId>true</externalId>
        <label>Device Plan Product Add On Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Device_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device Plan</label>
        <referenceTo>Device_Plan__c</referenceTo>
        <relationshipLabel>Device Plan Product Add Ons</relationshipLabel>
        <relationshipName>Device_Plan_Product_Add_Ons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Device Plan Product Add Ons</relationshipLabel>
        <relationshipName>Device_Plan_Product_Add_Ons</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Device Plan Product Add On</label>
    <nameField>
        <label>Device Plan Product Add On Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Device Plan Product Add Ons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>